fix(tags): tags section shouldn't be right aligned

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -136,3 +136,8 @@ sup {
   display: inline-block;
   margin-top: -0.5em;
 }
+
+// tag section shouldn't be right aligned
+.tags {
+  justify-self: start;
+}
